<resources>
    <string name="app_name">Android API Playground</string>
    <string name="action_settings">Settings</string>
    <string name="painting_title">Still-Life with Coffee Pot, Earthenware and Fruit</string>
    <string name="painting_author">Vincent van Gogh, 1888</string>
    <string name="painting_text">Bacon ipsum dolor amet venison rump pork belly strip steak meatball sausage. Kielbasa frankfurter leberkas shoulder kevin corned beef pork belly doner. Tongue strip steak capicola porchetta, salami pig filet mignon. Landjaeger turkey tail shoulder bresaola short loin meatball boudin leberkas porchetta ham hock chuck andouille drumstick. Turkey chuck jowl shankle bresaola strip steak.\n\nJerky tongue spare ribs landjaeger, beef ribs sirloin salami brisket. Pig ground round beef capicola venison filet mignon. Picanha porchetta ham shoulder biltong tongue pig jowl beef sirloin turkey alcatra pancetta. Pastrami alcatra sirloin pancetta pork chop beef ribs chuck salami kevin short loin ham beef bacon shank. Short loin pastrami tri-tip swine, ribeye jerky beef sausage tongue salami t-bone pork. Meatball pancetta drumstick frankfurter. Pancetta shoulder turducken spare ribs sausage.</string>
    <string name="mainview_transition_button_text">Transition Api</string>
    <string name="title_activity_animated_vector_drawable">AnimatedVectorDrawableActivity</string>
    <!--<string name="id_painting_container">painting_scene</string>-->
    <!--<string name="id_painting_image">painting_image</string>-->
    <!--<string name="id_painting_action_button">painting_action_button</string>-->
    <!--<string name="id_painting_author">painting_author</string>-->
    <!--<string name="id_painting_title">painting_title</string>-->


    <string name="heart_empty_path">M32.95,19 C31.036,19 29.199,19.8828338 28,21.2724796 C26.801,19.8828338 24.964,19 23.05,19 C19.6565,19 17,21.6321526 17,24.9945504 C17,29.1089918 20.74,32.4713896 26.405,37.5667575 L28,39 L29.595,37.5667575 C35.26,32.4713896 39,29.1089918 39,24.9945504 C39,21.6321526 36.3435,19 32.95,19 L32.95,19 Z M28.1155,35.9536785 L28,36.0572207 L27.8845,35.9536785 C22.654,31.2506812 19.2,28.1444142 19.2,24.9945504 C19.2,22.8201635 20.8555,21.1798365 23.05,21.1798365 C24.744,21.1798365 26.394,22.2643052 26.9715,23.7520436 L29.023,23.7520436 C29.606,22.2643052 31.256,21.1798365 32.95,21.1798365 C35.1445,21.1798365 36.8,22.8201635 36.8,24.9945504 C36.8,28.1444142 33.346,31.2506812 28.1155,35.9536785 L28.1155,35.9536785 Z</string>
    <string name="heart_full_path">M28,39 L26.405,37.5667575 C20.74,32.4713896 17,29.1089918 17,24.9945504 C17,21.6321526 19.6565,19 23.05,19 C24.964,19 26.801,19.8828338 28,21.2724796 C29.199,19.8828338 31.036,19 32.95,19 C36.3435,19 39,21.6321526 39,24.9945504 C39,29.1089918 35.26,32.4713896 29.595,37.5667575 L28,39 L28,39 Z</string>
    <string name="heart_clip_hidden">M18 37 L38 37 L38 37 L18 37 Z</string>
    <string name="heart_clip_shown">M0 0 L56 0 L56 56 L0 56 Z</string>


    <string name="mainview_animated_vector_drawables_text">Animated Vector Drawables</string>
    <string name="avdview_toolbar_title">Animated Vector Drawables</string>
    <!--<string name="cross_path">M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z</string>-->
    <!--<string name="check_path">M9,16.2L4.8,12l-1.4,1.4L9,19 21,7l-1.4,-1.4L9,16.2z</string>-->

    <string name="cross_name">cross</string>
    <string name="check_name">check</string>

    <string name="check_path">M4.8,13.4 L9,17.6 M10.4,16.2 L19.6,7</string>
    <string name="cross_path">M6.4,6.4 L17.6,17.6 M6.4,17.6 L17.6,6.4</string>
    <string name="heart_clip_name">clip</string>
    <string name="title_activity_state_list_animator">State List Animator + Reveal</string>
    <string name="statelistanimator_reveal_button_text">reveal</string>
    <string name="statelistanimator_reset_button_text">hide</string>
    <string name="statelistanimator_box_press_me_text">Press me</string>
    <string name="id_detail">\@+id/detail</string>
    <string name="id_keyboard">\@+id/detail</string>
    <string name="title_activity_adaptive_transitions">Adaptive Transitions</string>
</resources>
