<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchTransitionApiView"
            android:text="@string/mainview_transition_button_text"
            android:theme="@style/AppTheme.ButtonThemeOverlay" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchAnimatedVectorDrawableView"
            android:text="@string/mainview_animated_vector_drawables_text"
            android:theme="@style/AppTheme.ButtonThemeOverlay" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchStateListAnimatorView"
            android:text="@string/title_activity_state_list_animator"
            android:theme="@style/AppTheme.ButtonThemeOverlay" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchAdaptiveTransitionsView"
            android:text="@string/title_activity_adaptive_transitions"
            android:theme="@style/AppTheme.ButtonThemeOverlay" />


    </LinearLayout>
</ScrollView>

